# APIBurner

./: .gitignore  Cargo.toml  LICENSE  README.md  client.md  config.toml  package-lock.json  readme.md  server.js  server.md
client/: Cargo.toml
client/src/: main.rs
server/: package.json
src/: client.rs  main.rs  server.rs
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: TaskForm.tsx
