[package]
name = "pressure_test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
faker_rand = "0.1.1"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0" 