[package]
name = "api-burner"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
faker_rand = "0.1.1"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
actix-web = "4.0"
actix-web-actors = "4.0"
actix = "0.13"
tokio-tungstenite = "0.18"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
actix-cors = "0.6"
local-ip-address = "0.5"
chrono = { version = "0.4", features = ["serde"] }