[package]
name = "api-burner"
version = "0.1.0"
edition = "2024"

# 优化配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
lto = false

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.9"
serde_json = "1.0"
num_cpus = "1.16"
tokio-tungstenite = "0.28"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }